# StajProje

./: .gitignore  Build_Anlatım.txt  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  motionwindow.cpp  motionwindow.h  sonucekran.h
QT/MotionDetector/: CMakeLists.txt  formSonuclar.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  motiondetector.cpp  pythonScriptModel.cpp  pythonScriptModel.h  sonucekran.cpp  sonucekran.ui  sonuclar.ui
QT/MotionDetector/ai/: DetectionData.h  yolocommunicator.cpp  yolocommunicator.h
QT/MotionDetector/core/: FrameData.h  ThreadQueue.h  videocontroller.cpp  videocontroller.h
QT/MotionDetector/python/: requirements.txt  yolo_service.py
QT/MotionDetector/scripts/: motion_detection_model.py
QT/MotionDetector/ui/: mainwindow.h  mainwindow.ui
ai/: yolocommunicator.cpp  yolocommunicator.h
core/: FrameData.h  ThreadQueue.h  motioncontroller.cpp  motioncontroller.h  videocontroller.cpp  videocontroller.h
python/: config.json  custom_drone_service.py  tiled_drone_service.py  yolo_service.py
